# django_blog

./: .flake8  README.md  pyproject.toml
article/: admin.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py
django_blog/: settings.py  urls.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
static/css/: styles.css  styles.css.map  styles.scss
templates/: article_detail.html  article_list.html  base.html  home.html
